courses/430_programming-languages/assignment-6/tests/error/hw5_error10.nex
print "should not get here:n";
1 / 0;
f(true);
